cluster/examples/kubernetes/chubao/cluster-default2.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: rook-chubao
