cluster/examples/kubernetes/chubao/monitor.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: chubao-monitor-ingress
  namespace: rook-chubao
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: monitor.chubaofs.com
      http:
        paths:
          - backend:
              serviceName: grafana-service
              servicePort: 3000
    - host: console.chubaofs.com
      http:
        paths:
          - backend:
              serviceName: console-service
              servicePort: 17610
---
